--- a/styles/partials/_happenings.scss
+++ b/styles/partials/_happenings.scss
@@ -169,3 +169,4 @@
 
 .border-top-dotted {border-top: 1px $white dotted;}
 .border-bottom-dotted {border-bottom: 1px $white dotted;}
+.border-bottom-solid {border-bottom: 1px $white solid;}
