--- a/styles/partials/_happenings.scss
+++ b/styles/partials/_happenings.scss
@@ -17,9 +17,10 @@
         z-index: 2;
 
 
-        @include tablet {
+        @include monitor {
             font-size: 80px;
-
+            // position: sticky;
+            // top: 0px;
 
         }
 
@@ -94,6 +95,11 @@
 
     &__event {
 
+        // &__master {
+        //     position: sticky;
+        //     top: 40px;
+        //     z-index: 9;
+        // }
 
         &__wrapper {
             color: $white;
