--- a/styles/main.css
+++ b/styles/main.css
@@ -846,6 +846,10 @@ body {
   cursor: pointer;
   border-bottom: 1px #ffffff dotted;
   justify-content: space-between;
+  transition: background-color 0.25s linear;
+}
+.happenings__event__top:hover {
+  background: #DB643B;
 }
 .happenings__event__top-data {
   font-family: "TTI", sans-serif;
@@ -1254,6 +1258,7 @@ body {
   justify-content: flex-start;
   align-items: flex-start;
   overflow: auto;
+  background: #12181f;
 }
 @media only screen and (min-width: 750px) {
   .event__wrapper {
@@ -1263,17 +1268,19 @@ body {
 }
 .event__side {
   width: 100%;
-  background: #212335;
   padding: 25px 20px;
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
+  border-bottom: 1px dotted #ffffff;
 }
 @media only screen and (min-width: 750px) {
   .event__side {
     width: 30%;
     height: 100%;
     overflow: scroll !important;
+    border-right: 1px dotted #ffffff;
+    border-bottom: none;
   }
 }
 .event__side-logo {
@@ -1376,7 +1383,9 @@ body {
 
 .button {
   font-weight: 400;
-  border: 2px dashed white;
+  font-size: 10px;
+  text-transform: uppercase;
+  border: 1px dotted white;
   border-radius: 100px;
   color: white;
   background: none;
@@ -1384,16 +1393,13 @@ body {
   text-decoration: none;
   cursor: pointer;
 }
-.button:active {
-  font-weight: 800;
-}
 .button:hover {
-  border: 2px dashed white;
+  border: 1px dotted white;
   background: plum;
 }
 
 .active {
-  border: 2px dashed white;
+  border: 1px dotted white;
   background: plum;
 }
 
