--- a/styles/partials/_happenings.scss
+++ b/styles/partials/_happenings.scss
@@ -117,6 +117,11 @@
             cursor: pointer;
             border-bottom: 1px $white dotted;
             justify-content: space-between;
+            transition: background-color 0.25s linear;
+
+            &:hover {
+                background: $orange;
+            }
 
 
             &-data {
