--- a/styles/main.css
+++ b/styles/main.css
@@ -228,6 +228,8 @@ body {
   display: flex;
   flex-flow: column nowrap;
   border-top: 1px #ffffff solid;
+  font-size: 10px;
+  text-transform: uppercase;
 }
 .footer * {
   color: #ffffff;
@@ -251,7 +253,7 @@ body {
   order: 2;
   border-top: 1px #ffffff solid;
 }
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1280px) {
   .footer {
     flex-flow: row nowrap;
   }
@@ -263,7 +265,7 @@ body {
     padding: 20px 60px 20px 20px;
   }
   .footer__nav a {
-    margin-left: 30px;
+    margin-left: 60px;
   }
   .footer__copyright {
     justify-content: flex-start;
@@ -857,6 +859,7 @@ body {
   font-size: 12px;
   text-transform: uppercase;
   padding: 0 10px;
+  letter-spacing: 0.83px;
 }
 @media only screen and (min-width: 1000px) {
   .happenings__event__top-data {
@@ -878,7 +881,6 @@ body {
 }
 .happenings__event__top-title, .happenings__event__top-button {
   font-weight: 800;
-  text-transform: none;
 }
 .happenings__event__top-button {
   padding-right: 20px;
@@ -890,6 +892,9 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+}
+.happenings__event__top-type, .happenings__event__top-location, .happenings__event__top-date {
+  font-family: "TTI-mono", monospace;
 }
 .happenings__event__dropdown {
   display: none;
@@ -1291,7 +1296,7 @@ body {
 .event__side-title {
   color: #ffffff;
   font-family: Morion;
-  font-weight: 100;
+  font-weight: 100 !important;
   margin: 20px 0 30px 0;
 }
 .event__side-paragraph {
@@ -1299,10 +1304,13 @@ body {
   font-family: "TTI", sans-serif;
   font-weight: 400;
   padding-bottom: 30px;
+  font-size: 12px;
 }
 .event__side-paragraph-mono {
   font-family: "TTI-mono", monospace;
   font-weight: 400;
+  font-size: 10px;
+  line-height: 16px;
 }
 .event__side-paragraph-mono-600 {
   font-weight: 600;
