--- a/styles/partials/_breakpoints.scss
+++ b/styles/partials/_breakpoints.scss
@@ -27,6 +27,12 @@
       @content;
     }
   }
+
+  @mixin twelve-eighty {
+    @media only screen and (min-width: 1280px) {
+      @content;
+    }
+  }
   
   @mixin twok {
     @media only screen and (min-width: 1440px) {
