--- a/styles/partials/_event.scss
+++ b/styles/partials/_event.scss
@@ -47,7 +47,7 @@
         &-title {
             color: $white;
             font-family: Morion;
-            font-weight: 100;
+            font-weight: 100 !important;
             margin: 20px 0 30px 0;
         }
 
@@ -56,10 +56,13 @@
             font-family: "TTI", sans-serif;
             font-weight: 400;
             padding-bottom: 30px;
+            font-size: 12px;
 
             &-mono {
                 font-family: "TTI-mono", monospace;
                 font-weight: 400;
+                font-size: 10px;
+                line-height: 16px;
 
                 &-600 {
                     font-weight: 600;
